--- a/myapp/style/main.css
+++ b/myapp/style/main.css
@@ -1,1 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
+
+body, p {
+    padding-top: 50px;
+    font-family: 'Oswald', sans-serif;
+}
+
