--- a/myapp/public/style/main.css
+++ b/myapp/public/style/main.css
@@ -1,16 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
 
 body, p {
-    padding-top: 50px;
     font-family: 'Oswald', sans-serif;
     align-content: center;
 }
 
-a {
-    text-transform: capitalize;
-    color: aqua;
-}
-
-footer {
- align-content: center;
+.text-link {
+    color: red;
 }
