--- a/myapp/public/style/main.css
+++ b/myapp/public/style/main.css
@@ -15,17 +15,18 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
 }
 #bigDiv {
     margin-top: 60px !important;
     border-width: 2px;
     border-style:inset;
-    width: 500px;
+    width: 442px;
     height: 500px;
     box-shadow: 10px 5px 5px grey;
     border-radius: 6px;
+    border-color: darkorchid;
     background-color: darkorchid;
 }
 .cardContentTop {
@@ -34,7 +35,7 @@ footer {
     width: 440px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-bottom: 20px;
     margin-top: 20px;
     color: whitesmoke;
@@ -46,10 +47,11 @@ footer {
     width: 440px;
     height: 150px;
     margin-top: 15px;
-    border-top-width: 2px;
+    border-top-width: 4px;
     border-top-style:inset;
-    border-top-color:black;
+    border-top-color:whitesmoke;
     color: white;
+    padding: 15px;
 }
 .card-image {
     margin-left: auto !important;
@@ -61,7 +63,7 @@ footer {
 .données {
     margin-left: auto !important;
     margin-right: auto !important;
-    width: 440px;
+    width: 480px;
     height: 150px;
     margin-top: 20px;
     font-size: 24px;
