fix error page again

--- a/myapp/public/style/main.css
+++ b/myapp/public/style/main.css
@@ -60,6 +60,12 @@ footer {
 
 }
 
+.text-link {
+    color: red;
+    font-weight: bold;
+    font-size: 150%;
+}
+
 .données {
     margin-left: auto !important;
     margin-right: auto !important;
