3 cards in 1 line

--- a/myapp/public/style/main.css
+++ b/myapp/public/style/main.css
@@ -11,18 +11,20 @@ a {
 footer {
     align-content: center;
 }
-.container {
+/*.container {*/
+
+/*}*/
+#container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-
+    justify-content: space-between;
 }
-#bigDiv {
+#cardStream {
     margin-top: 60px !important;
     border-width: 2px;
     border-style:inset;
-    width: 442px;
+    width: 30%;
     height: 500px;
     box-shadow: 10px 5px 5px grey;
     border-radius: 6px;
@@ -32,7 +34,7 @@ footer {
 .cardContentTop {
     margin-left: auto !important;
     margin-right: auto !important;
-    width: 440px;
+    /*width: 440px;*/
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -44,8 +46,8 @@ footer {
 .card-content {
     margin-left: auto !important;
     margin-right: auto !important;
-    width: 440px;
-    height: 150px;
+    /*width: 440px;*/
+    /*height: 150px;*/
     margin-top: 15px;
     border-top-width: 4px;
     border-top-style:inset;
@@ -53,10 +55,11 @@ footer {
     color: white;
     padding: 15px;
 }
-.card-image {
-    margin-left: auto !important;
-    margin-right: auto !important;
-    width: 440px;
+.card-image img {
+    /*margin-left: auto !important;*/
+    /*margin-right: auto !important;*/
+    width: 100%;
+    /*flex: 1;*/
 
 }
 
